# WiFi_Tracker_Project

./: .gitignore  ArchitectureFede.md  README.md  ciao.txt
ConnDebug/: MainWindow.xaml  MainWindow.xaml.cs  README.txt  ServerSocketWpfApp.csproj
Database/: database.sql  deleteDB.sql
ESP32/: .cproject  .project  sdkconfig
ESP32/main/: cmd_file.c  cmd_file.h  cmd_socket.h  main.c
Micro/: README.txt
Micro/ServerEcho_Wpf/: MainWindow.xaml  MainWindow.xaml.cs  ServerSocketWpfApp.sln
Micro/client_boardTest/: sdkconfig
Micro/client_boardTest_old/: partitions.csv  sdkconfig  sdkconfig.old
Micro/client_boardTest_v1.0/: .cproject  sdkconfig  sdkconfig.old
Micro/server_dialog_testv1.1/: CMakeLists.txt  makefile
Micro/server_dialog_testv1.1/Client/: Client.c
Micro/server_dialog_testv1.1/Server/: Server  Server.c  Server_broker  Server_broker.c  Server_messanger
Server/: Aggregator.cs  AnalysisEngine.cs  Analyzer.cs  App.config  App.xaml  App.xaml.cs  Calibrator.cs  Circle.cs  ConcurrentCircular.cs  ConcurrentDictionaryStack.cs  Connection.cs  Context.cs  DatabaseInterface.cs  DatabasePublisher.cs  Device.cs  FileParser.cs  GrandientDescender.cs  Graphics.cs  GuiInterface.cs  InsertionSortedConcurrentDictionary.cs  Interpolators.cs  MainWindow.xaml  MainWindow.xaml.cs  Packet.cs  Panopticon.csproj  Point.cs  Position.cs  PositionTools.cs  Protocol.cs  Publisher.cs  Room.cs  Server.csproj  Server.sln  Startup.xaml  Startup.xaml.cs  Station.cs  StationAdder.xaml  StationAdder.xaml.cs  StationHandler.cs  Tester.cs  (+7 more)
Test/: Program.cs  Test.csproj
(+41 files in other folders)
